# havvels

./: .gitignore  CMakeLists.txt  coex_log.txt  office_wifi_interferance_with_different.txt  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32s3  sdkconfig.s3  sdkconfig.s3.old  tcp_server.py  tmpclaude-6955-cwd
.agent/workflows/: build-and-flash.md
build_esp32_intercom/: .bin_timestamp  .ninja_deps  .ninja_log  config.env  flash_app_args  flash_args  flasher_args.json  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_h2/: .bin_timestamp  .ninja_deps  .ninja_log  config.env  flash_args  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_h2_coord/: .bin_timestamp  .ninja_deps  .ninja_log  config.env  flash_app_args  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_h2_end/: .bin_timestamp  .ninja_deps  .ninja_log  config.env  flasher_args.json  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_s3/: .bin_timestamp  .ninja_deps  .ninja_log  config.env  flash_args  flasher_args.json  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_s3_intercom/: .bin_timestamp  .ninja_deps  .ninja_log  app-flash_args  config.env  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
co-ex_boiler/: agent_workflow.md  tmpclaude-e51b-cwd
co-ex_boiler/NodeA_s3/main/: CMakeLists.txt  main.c
main/: CMakeLists.txt  coex_packet.c  coex_packet.h  main.c  main_intercom.c
(+518 files in other folders)
